--- a/zk-solana-aa/programs/zk-solana-aa/Cargo.toml
+++ b/zk-solana-aa/programs/zk-solana-aa/Cargo.toml
@@ -18,5 +18,9 @@ idl-build = ["anchor-lang/idl-build"]
 
 
 [dependencies]
-anchor-lang = "0.31.1"
+# sp1-solana requires anchor-lang 0.30.1
+anchor-lang = "0.31.0"
+borsh = "1.5.1"
+# Tagged as non production ready
+sp1-solana = { git = "https://github.com/succinctlabs/sp1-solana" }
 
