--- a/zk-solana-aa/Anchor.toml
+++ b/zk-solana-aa/Anchor.toml
@@ -12,8 +12,12 @@ zk_solana_aa = "DMztWS673fGnGLPReJa5pVNaMqG5VxRjjFcnNXaDzX54"
 [registry]
 url = "https://api.apr.dev"
 
+# [provider]
+# cluster = "localnet"
+# wallet = "~/.config/solana/id.json"
+
 [provider]
-cluster = "localnet"
+cluster = "devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
