--- a/zk-solana-aa/Anchor.toml
+++ b/zk-solana-aa/Anchor.toml
@@ -12,13 +12,13 @@ zk_solana_aa = "DMztWS673fGnGLPReJa5pVNaMqG5VxRjjFcnNXaDzX54"
 [registry]
 url = "https://api.apr.dev"
 
-[provider]
-cluster = "localnet"
-wallet = "~/.config/solana/id.json"
-
 # [provider]
-# cluster = "devnet"
+# cluster = "localnet"
 # wallet = "~/.config/solana/id.json"
+
+[provider]
+cluster = "devnet"
+wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
